manifests/haircolor/haircolor.yaml
# See haircolor-ingress.yaml for additional notes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haircolor
spec:
  selector:
    matchLabels:
      app: whatcolorischristinashair
  replicas: 1
  template:
    metadata:
      labels:
        app: whatcolorischristinashair
    spec:
      containers:
      - name: whatcolorischristinashair
        image: vigevenoj/whatcolorischristinashair:latest
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: haircolor
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whatcolorischristinashair
